; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_dereference_to_non_tag.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_dereference_to_non_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OBJECT_TAG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*)* @dereference_to_non_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dereference_to_non_tag(i32** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = call i64 @git_object_type(i32* %6)
  %8 = load i64, i64* @GIT_OBJECT_TAG, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32**, i32*** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @git_tag_peel(i32** %11, i32* %12)
  store i32 %13, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load i32**, i32*** %4, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @git_object_dup(i32** %15, i32* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %10
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @git_object_type(i32*) #1

declare dso_local i32 @git_tag_peel(i32**, i32*) #1

declare dso_local i32 @git_object_dup(i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
